--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -19,6 +19,6 @@
   <filter-mapping>
       <!-- 设置应用Struts核心Filter的URL映射 -->
       <filter-name>struts2</filter-name>
-      <url-pattern>*.action</url-pattern>
+      <url-pattern>/*</url-pattern>
   </filter-mapping>
 </web-app>
